--- a/page558/README.rdoc
+++ b/page558/README.rdoc
@@ -44,5 +44,8 @@ end
   
   552  bin/rails server
 
+http://localhost:3000/ to see if it's alive
+http://localhost:3000/status/index to see running processes yeah
+
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
